--- a/Components/header.html
+++ b/Components/header.html
@@ -7,7 +7,8 @@
 
 <body>
     <nav class="NavBarBanner">
-        <img src="/Public/XiaoY.png" class="ProfileImage" onclick="window.open('https://github.com/zibuyin')" />
+        <img src="/Public/XiaoY-circular.png" class="ProfileImage"
+            onclick="window.open('https://github.com/zibuyin')" />
         <ul class="NavBarList">
             <li class="NavBarListItem"><a href="/index.html" target="_top">Home</a></li>
             <li class="NavBarListItem"><a href="/Components/projects.html" target="_top">Projects</a></li> <!-- TODO -->
