--- a/Styles/header.css
+++ b/Styles/header.css
@@ -18,11 +18,11 @@ body {
 .ProfileImage {
   /* Rescale image to fit */
   width: 40px;
-  border-radius: 50%;
-  padding-left: 10px;
+  /* border-radius: 40%; */
+  margin-left: 10px;
   cursor: pointer;
 
-
+  animation: spin-back 1s ease;
   user-select: none;
   -moz-user-select: none;
   -khtml-user-select: none;
@@ -30,13 +30,13 @@ body {
   -o-user-select: none;
 }
 
-/* .ProfileImage:active {
-  transition: 0.3s ease;
-  width: 200px;
-  margin-top: 160px;
-  rotate: 360deg;
 
-} */
+
+.ProfileImage:hover {
+  animation: spin 1s ease;
+
+
+}
 
 /* The list... */
 .NavBarList {
@@ -60,10 +60,46 @@ body {
   text-align: center;
   padding: 16px;
   text-decoration: none;
+  animation: appear 1s ease;
 }
 
 /* Hovering the Hrefs */
 a:hover {
   background-color: rgb(76, 38, 114);
-  transition: background-color 0.3s;
+  color: orange;
+  transition: 0.3s;
+}
+
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
+
+}
+
+@keyframes spin-back {
+  from {
+    transform: rotate(360deg);
+  }
+
+  to {
+    transform: rotate(0deg);
+  }
+
+}
+
+@keyframes appear {
+  from {
+    padding: 0;
+  }
+
+  to {
+    padding: 16;
+  }
+
 }
